Remove the fortran module files on make mostlyclean.
This apparently wasn't done earlier.  I should probably look into
changing this to MOSTLYCLEANFILES=*.mod at some point.

--- a/Makefile.am
+++ b/Makefile.am
@@ -18,3 +18,6 @@ wrfchembc_GEOS_SOURCES = module_GEOS_lib.f90 module_wrfchem_lib.f90 main_bc_wrfc
 wrfchembc_CT_SOURCES = module_CT_lib.f90 module_wrfchem_lib.f90 main_bc_wrfchem_CT.f90
 
 dist_doc_DATA = README.md README_CT.md README_GEOSChem.md LICENSE
+
+MOSTLYCLEANFILES = module_ct_lib.mod module_geos_lib.mod	\
+    module_wrfchem_lib.mod
